part completed js code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
-    <div class="timer">Time: <span id="time">0</span></div>
+    <div class="timer">Time: <span id="time">80</span></div>
 
     <div class="wrapper">
       <div id="start-screen" class="start">
@@ -27,7 +27,13 @@
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id="choices" class="choices">
+          <button id="option1"></button>
+          <button id=option2 class="button option-button"></button>
+          <button id=option3 class="button option-button"></button>
+          <button id=option4 class="button option-button"></button>
+
+        </div>
       </div>
 
       <div id="end-screen" class="hide">
